# miden-vm

./: .clippy.toml  .git-blame-ignore-revs  .gitattributes  .gitignore  .release-plz.toml  BENCHMARK_REPRODUCTION.md  CHANGELOG.md  CONSTRAINT_CHANGES.md  CONTRIBUTING.md  Cargo.toml  GITHUB_ISSUE_AUX_TRACE_BUILDER.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION_NOTES.md  MIGRATION_NOTES_bkp.md  Makefile  PLONKY3_DOCUMENTATION_UPDATES.md  PLONKY3_GITHUB_ISSUES.md  PLONKY3_MIGRATION_TODOS.md  PRECOMPILES_PROVER_FOUNDATION_PORT_PLAN.md  PR_2472_REVIEW_RESPONSES.md  PVM-comments.md  PVM-spec-amendment-revision.md  PVM.md  README.md  RELEASE-PROCEDURE.md  SECURITY.md  blake3_1to1.proof  deny.toml  design.md  lychee.toml  plan.md  pvm_chunk_chip_comment.outline.md  pvm_field_comment.md  pvm_host.md  pvm_host_comment.md  pvm_opcode_comment.md  pvm_spec_comment.md  ref.md  refactor.md  (+9 more)
air/: Cargo.toml  README.md
air/benches/: enforce_stack_constraint.rs  enforce_stack_constraint.rs.disabled
air/src/: ace.rs  aux_builder.rs  config.rs  errors.rs  lib.rs  multi_air.rs  options.rs  proof.rs  proof_order.rs  row_major_adapter.rs  transpose.rs
air/tests/: ace_codegen.rs  bus_degree_inventory.rs  generated_drift.rs
benches/blake3-bench/: Cargo.toml
benches/miden-bench/: Cargo.toml
benches/precompiles-bench/: Cargo.toml
benches/smt-codspeed/: Cargo.toml
benches/synthetic-bench/: Cargo.toml  README.md
benches/synthetic-tx-kernel/: Cargo.toml  README.md
core/: Cargo.toml  README.md
core/benches/: mast_forest_merge.rs  mast_serialization_size.rs
core/src/: deferred.rs  errors.rs  event_id.rs  kernel.rs  lib.rs  precompile.rs  precompile_ids.rs  program.rs  proof.rs  sys_events.rs
core/tests/: deferred_chunk.rs  deferred_field0.rs  deferred_mock_group.rs  deferred_mock_hash.rs  deferred_mock_sig.rs  deferred_precompile_state_effects.rs  deferred_uint256.rs  precompile_group.rs  precompile_hash.rs  precompile_sig.rs  precompile_uint.rs  public_api.rs
crates/ace-codegen/: Cargo.toml  README.md
crates/assembly-syntax/: Cargo.toml  README.md  build.rs
crates/assembly-syntax-cst/: Cargo.toml  README.md  build.rs
crates/crypto/: Cargo.toml  build.rs
crates/crypto-derive/: Cargo.toml
crates/debug-types/: Cargo.toml
crates/derive-mast-node-ext/: Cargo.toml  README.md
miden-bench/: Cargo.toml
miden-bench/src/: lifted.rs  main.rs
miden-core-fuzz/: Cargo.toml  README.md
miden-core-fuzz/fuzz_targets/: advice_inputs_deserialize.rs  advice_map_serde_deserialize.rs  basic_block_data.rs  debug_info.rs  execution_proof_deserialize.rs  execution_proof_serde_deserialize.rs  kernel_deserialize.rs  kernel_serde_deserialize.rs  library_deserialize.rs  library_serde_deserialize.rs  mast_forest_deserialize.rs  mast_forest_serde_deserialize.rs  mast_forest_validate.rs  mast_forest_wire_view_new.rs  mast_node_info.rs  operation_deserialize.rs  operation_serde_deserialize.rs  package_deserialize.rs  package_semantic_deserialize.rs  package_serde_deserialize.rs  precompile_request_deserialize.rs  precompile_request_serde_deserialize.rs  program_deserialize.rs  program_serde_deserialize.rs  project_assemble.rs  project_load.rs  project_toml_parse.rs  serialized_mast_forest_new.rs  sparse_mast_forest_deserialize.rs  sparse_mast_forest_validate.rs  stack_io_deserialize.rs  trace_proving_inputs_deserialize.rs
miden-crypto/: Cargo.toml
miden-crypto-derive/: Cargo.toml
miden-crypto-fuzz/: Cargo.toml
miden-crypto-fuzz/fuzz_targets/: mmr.rs  partial_smt.rs  signatures.rs  smt.rs  smt_serde.rs  word.rs
miden-crypto/benches/: dsa.rs  large_smt.rs  large_smt_forest.rs  sparse_path.rs  transpose.rs  word.rs
miden-crypto/src/: boxed_storage.rs  lib.rs  main.rs
miden-crypto/tests/: rocksdb_large_smt.rs
miden-field/: Cargo.toml
miden-field/src/: lib.rs  utils.rs  wasm_miden.rs
miden-fmt/: Cargo.toml  README.md  debug_test.masm
miden-fmt/src/: constants.rs  lib.rs  main.rs  types.rs  utils.rs
miden-fmt/tests/: formatter_tests.rs
miden-serde-utils/: Cargo.toml  README.md
miden-serde-utils/fuzz/: Cargo.toml
miden-serde-utils/src/: byte_reader.rs  lib.rs
miden-vm/: Cargo.toml  README.md
miden-vm/benches/: blake3_1to1_codspeed.rs  blake3_1to1_fast.rs  build_trace.rs  deserialize_core_lib.rs  deserialize_core_lib_debug_info.rs  program_execution.rs  program_execution_fast.rs  program_execution_for_trace.rs
miden-vm/masm-examples/: README.md  memory_heavy.masm
miden-vm/src/: internal.rs  lib.rs  main.rs
precompiles/: CHANGELOG.md  Cargo.toml  PLAN.md  README.md  build.rs
precompiles-prover/: .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  DESIGN.md  README.md  rust-toolchain.toml
precompiles-prover/docs/: air-overview.md  architecture.md  byte-pair-lut-preprocessed.md  ed25519-sw-image.md  forward-looking.md  framework-migration.md  lookup-argument.md  transcript-eval.md  transcript-nodes.md  uint-selective-flatten.md
precompiles-prover/examples/: bench_keccak_n.rs  bench_uint_horner.rs  dump_trace_heights.rs  ec_msm_ecdsa.rs  ec_scalar_mul.rs  ecdsa_shape.rs  parse_trace_heights.py
precompiles-prover/src/: ace.rs  lib.rs  math.rs  relations.rs  stark_config.rs  utils.rs
precompiles/asm/: miden-project.toml  mod.masm
precompiles/benches/: precompiles_bench.rs
precompiles/codegen/: Cargo.toml
precompiles/src/: codec.rs  lib.rs
precompiles/tests/: package.rs
processor/: Cargo.toml  README.md
processor/src/: continuation_stack.rs  debug.rs  errors.rs  execution.rs  execution_options.rs  lib.rs  processor.rs  row_major_adapter.rs  tests.rs  tracer.rs  utils.rs
processor/tests/: advice_public_api.rs  async_compat.rs  deferred_e2e.rs  duplicate_nodes_with_debug_decorators.rs  duplicate_nodes_with_trace_decorators.rs  eval_circuit_overflow.rs  issue_2456_test.rs  streamed_hasher.rs
prover/: Cargo.toml  README.md
prover/src/: huge_alloc.rs  lib.rs  proving_options.rs  public_inputs.rs  trace_adapter.rs
prover/tests/: async_compat.rs  huge_alloc_smaps.rs  integration_test.rs  trace_proving_inputs_seeds.rs
verifier/: Cargo.toml  README.md
(+13394 files in other folders)
