[workspace]
members = [
    "air",
    "benches/synthetic-tx-kernel",
    "core",
    "crates/ace-codegen",
    "crates/assembly",
    "crates/assembly-syntax",
    "crates/debug-types",
    "crates/lib/core",
    "crates/mast-package",
    "crates/package-registry",
    "crates/project",
    "crates/test-serde-macros",
    "crates/test-utils",
    "crates/utils-core-derive",
    "crates/utils-diagnostics",
    "crates/utils-indexing",
    "crates/utils-sync",
    "miden-vm",
    "processor",
    "prover",
    "verifier",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Miden contributors"]
homepage = "https://miden.xyz"
repository = "https://github.com/0xMiden/miden-vm"
exclude = [".github/"]
rust-version = "1.90"
version = "0.23.0"

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = true

[profile.test-dev]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
# Workspace crates
miden-ace-codegen       = { path = "./crates/ace-codegen", version = "0.23.0", default-features = false }
miden-air               = { path = "./air", version = "0.23.0", default-features = false }
miden-assembly          = { path = "./crates/assembly", version = "0.23.0", default-features = false }
miden-assembly-syntax   = { path = "./crates/assembly-syntax", version = "0.23.0", default-features = false }
miden-core              = { path = "./core", version = "0.23.0", default-features = false }
miden-debug-types       = { path = "./crates/debug-types", version = "0.23.0", default-features = false }
miden-mast-package      = { path = "./crates/mast-package", version = "0.23.0", default-features = false }
miden-package-registry  = { path = "./crates/package-registry", version = "0.23.0", default-features = false }
miden-processor         = { path = "./processor", version = "0.23.0", default-features = false }
miden-test-serde-macros = { path = "./crates/test-serde-macros", default-features = false }
miden-project           = { path = "./crates/project", version = "0.23.0", default-features = false }
miden-prover            = { path = "./prover", version = "0.23.0", default-features = false }
miden-core-lib          = { path = "./crates/lib/core", version = "0.23.0", default-features = false }
miden-utils-core-derive = { path = "./crates/utils-core-derive", version = "0.23.0", default-features = false }
miden-utils-diagnostics = { path = "./crates/utils-diagnostics", version = "0.23.0", default-features = false }
miden-utils-indexing    = { path = "./crates/utils-indexing", version = "0.23.0", default-features = false }
miden-utils-sync        = { path = "./crates/utils-sync", version = "0.23.0", default-features = false }
miden-utils-testing     = { path = "./crates/test-utils", package = "miden-test-utils" }
miden-verifier          = { path = "./verifier", version = "0.23.0", default-features = false }

# Miden crates
miden-crypto     = { version = "0.23", default-features = false }
miden-formatting = { version = "0.1", default-features = false }
midenc-hir-type  = { version = "0.5", default-features = false }

# Serialization
bincode = "1.3"

# Constraints to resolve duplicates
windows-sys = "0.61"

# Third-party crates
criterion       = { version = "0.7" }
derive_more     = { version = "2.0", features = ["from"] }
env_logger      = { version = "0.11" }
insta           = { version = "1.43", default-features = false, features = ["colors"] }
itertools       = { version = "0.14", default-features = false, features = ["use_alloc"] }
log             = { version = "0.4", default-features = false }
paste           = { version = "1.0", default-features = false }
proptest        = { version = "1.8", default-features = false, features = ["no_std", "alloc"] }
proptest-derive = { version = "0.7", default-features = false }
serde           = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json      = { version = "1.0", default-features = false, features = ["alloc"] }
serde-untagged  = {version = "0.1" }
smallvec        = { version = "1.15", default-features = false, features = ["union", "const_generics", "const_new"] }
syn             = "1.0"
tempfile        = { version = "3.18", default-features = false }
thiserror       = { version = "2.0", default-features = false }
tokio           = { version = "1.48", default-features = false }
tracing         = { version = "0.1", default-features = false, features = ["attributes"] }

# WASM support
getrandom = { version = "0.2", default-features = false, features = ["js"] }
loom = "0.7"
miette = { package = "miden-miette", version = "8.0", default-features = false }
num-bigint = "0.4"
pretty_assertions = { version = "1.4", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
rand_chacha = { version = "0.9", default-features = false }
rstest = "0.26"
toml = { version = "1.0", default-features = false }

[workspace.lints.rust]
unexpected_cfgs = { check-cfg = ['cfg(fuzzing)'], level = "warn" }
