[package]
name = "miden-air"
version.workspace = true
description = "Algebraic intermediate representation of Miden VM processor"
documentation = "https://docs.rs/miden-air"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["air", "arithmetization", "crypto", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
arbitrary = ["std", "dep:proptest"]
std = ["miden-core/std", "proptest?/std", "thiserror/std"]
concurrent = ["std"]
testing = []

[dependencies]
# Miden dependencies
miden-ace-codegen.workspace = true
miden-core.workspace = true
miden-crypto.workspace = true
miden-lifted-stark.workspace = true
miden-utils-indexing.workspace = true

# External dependencies
proptest = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
miden-ace-codegen = { workspace = true, features = ["testing"] }
miden-test-serde-macros.workspace = true
proptest.workspace = true
