[package]
name = "miden-core"
version = "0.26.0"
description = "Miden VM core components"
documentation = "https://docs.rs/miden-core"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["instruction-set", "miden", "program"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
exclude = ["*.snap"]

[lib]
bench = false
doctest = false

[[bench]]
name = "mast_forest_merge"
required-features = ["arbitrary"]
harness = false

[[bench]]
name = "mast_serialization_size"
required-features = ["arbitrary"]
harness = false

[features]
default = ["std"]
std = [
    "miden-crypto/std",
    "miden-debug-types/std",
    "miden-formatting/std",
    "miden-utils-indexing/std",
    "miden-utils-sync/std",
    "thiserror/std",
]
serde = [
    "dep:serde",
    "miden-crypto/serde",
    "miden-debug-types/serde",
    "miden-utils-indexing/serde",
]
arbitrary = ["dep:proptest"]
testing = ["arbitrary"]
fuzzing = []

[dependencies]
# Miden dependencies
miden-crypto.workspace = true
miden-debug-types.workspace = true
miden-formatting.workspace = true
miden-utils-core-derive.workspace = true
miden-utils-indexing.workspace = true
miden-utils-sync.workspace = true

# External dependencies
derive_more.workspace = true
log.workspace = true
proptest = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
criterion = { workspace = true }
insta.workspace = true
miden-test-serde-macros.workspace = true
proptest.workspace = true
rstest = { workspace = true }
serde_json = { workspace = true }
miden-utils-testing.workspace = true
trybuild.workspace = true
