[package]
authors.workspace      = true
categories.workspace   = true
description            = "Procedural macros for miden-crypto"
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
name                   = "miden-crypto-derive"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn   = { features = ["full"], workspace = true }

[lints]
workspace = true
